<resources>
    <string name="app_name">FeedArticlesJetpack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="feed_articles">Feed Articles</string>

    <!--    USER    -->
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="pas_de_compte_inscrivez_vous">Pas de compte ? inscrivez-vous !</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="comfirmation_password">Comfirmation Password</string>
    <string name="nouveau_compte">Nouveau Compte</string>
    <string name="user_register">utilisateur enregistré</string>
    <string name="user_not_register">utilisateur non enregistré</string>
    <string name="user_athenticated">utilisateur authentifié</string>
    <string name="user_not_authenticated">utilisateur non authentifié</string>
    <string name="login_already_used">login déjà utilisé</string>
    <string name="token_problem">authentifié mais token inchangé</string>
    <string name="password_problem">mot de passe et confirmation sont différents</string>

    <!--    LABEL-->
    <string name="tout_label">Tout</string>
    <string name="sport_label">Sport</string>
    <string name="manga_label">Manga</string>
    <string name="divers_label">Divers</string>

    <!--    ARTICLE-->
    <string name="add_new_articles">add new articles</string>
    <string name="favori">favori</string>
    <string name="article_image">article image</string>
    <string name="enregister">Enregister</string>
    <string name="nouvel_article">Nouvel Article</string>
    <string name="titre_label">Titre</string>
    <string name="image_url">Image url</string>
    <string name="contenu">Contenu</string>
    <string name="d_tails_article">Détails Article</string>
    <string name="articles_unauthorized">non autorisé</string>
    <string name="articles_param_problem">erreur de paramétres</string>
    <string name="articles_error_connection">erreur de connection</string>
    <string name="new_article_success">article créé</string>
    <string name="update_article_success">article modifié</string>
    <string name="new_article_failure">pas de création</string>
    <string name="update_article_failure">pas de modification</string>
    <string name="update_article_id_problem">les ids sont différents</string>
    <string name="article_deleted">article supprimé</string>
    <string name="title_too_long">titre 80 caractères maximum</string>
    <string name="retour">Retour</string>
    <string name="logout">logout</string>
    <string name="parameters_problem">probléme de paramétres</string>
    <string name="unauthorized">probléme d\'autorisation</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="article_not_deleted">pas de suppression</string>
    <string name="are_you_sure_to_delete">Voulez-vous supprimer cet article ?</string>
    <string name="edit_article_title">Edition Article</string>
    <string name="supprimer">Supprimer</string>
    <string name="created_at">Créé le %1$s</string>
    <string name="categorie">categorie: %1$s</string>
    <string name="mettre_jour">Mettre à jour</string>


    <string name="welcome">bienvenue</string>
    <string name="server_error">erreur du serveur</string>
    <string name="empty_fields">tous les champs doivent être remplis</string>
    <string name="bye_bye">bye bye</string>
    <string name="status_favorite_changed">statut de favori changé</string>
    <string name="status_favorite_not_changed">statut de favori inchangé</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>



</resources>