<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top bar -->
        <LinearLayout
            android:id="@+id/relative_layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="@string/add_new_articles"
                android:layout_weight="1"

               />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/btn_star"
                android:contentDescription="@string/favori"
                android:layout_weight="1"

                />

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/logout"
                android:contentDescription="@string/logout"
                android:layout_weight="1"
                />

        </LinearLayout>

        <!--RecyclerView-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_articles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_layout_top" />

        <!--checkbox-->
        <LinearLayout
            android:id="@+id/checkbox_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="16dp">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tout_label" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sport_label" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/manga_label" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/divers_label" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>