<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFragment">

    <TextView
        android:id="@+id/tv_new_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouveau_compte"
        android:textColor="@color/blue_primary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="160dp"
        >

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/blue_primary"
            android:textColorHighlight="@color/blue_primary"
            android:hint="@string/login_label"
            android:autofillHints="Login"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:textColorHint="@color/blue_primary"
            android:hint="@string/password_label"
            android:autofillHints="Password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:textColorHint="@color/blue_primary"
            android:hint="@string/comfirmation_password"
            android:autofillHints="Confirm Password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/s_inscrire" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>