<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginData"
            type="String" />

        <variable
            name="passwordData"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">


        <TextView
            android:id="@+id/tv_new_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/connectez_vous"
            android:textColor="@color/blue_primary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="80dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Login"
                android:ems="10"
                android:hint="@string/login_label"
                android:text="@={loginData}"
                android:inputType="textPersonName"
                android:textColorHighlight="@color/blue_primary"
                android:textColorHint="@color/blue_primary" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="Password"
                android:ems="10"
                android:hint="@string/password_label"
                android:text="@={passwordData}"
                android:inputType="textPassword"
                android:textColorHint="@color/blue_primary" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/se_connecter" />

            <TextView
                android:id="@+id/tv_login_to_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pas_de_compte_inscrivez_vous"
                android:textAlignment="center"
                android:textColor="@color/blue_primary"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>