<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailsArticleFragment">


    <LinearLayout
        android:id="@+id/linearLayout_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"

        >


        <!-- Top -->
        <RelativeLayout
            android:id="@+id/relative_layout_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--TO BE CHANGED-->
            <TextView
                android:id="@+id/tv_details_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/d_tails_article"
                android:textColor="@color/blue_primary"
                android:textSize="28sp"
                android:textStyle="bold" />
            <!--TO BE CHANGED-->
            <ImageView
                android:id="@+id/iv_btn_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/favori"
                android:src="@android:drawable/btn_star" />

        </RelativeLayout>

        <!-- DATE AND CATEGORY -->

        <LinearLayout
            android:id="@+id/date_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout_top">

            <TextView
                android:id="@+id/tv_article_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                tools:text="Créé le 25/02/2020"

                />


            <TextView
                android:id="@+id/tv_article_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                tools:text="categorie: Divers" />

        </LinearLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue_primary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_category_layout"
            tools:text="Un titre qui peut être moyennement long" />

        <!-- Image Article -->
        <ImageView
            android:id="@+id/iv_article_image"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:contentDescription="@string/article_image"
            android:src="@drawable/feedarticles_logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_title" />

        <!-- Scrollable text view -->


        <!--TO MODIFY? KEEP BUTTON DOWN IF TEXT IS SHORTER-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginBottom="16dp">

            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fillViewport="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_article_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_primary"
                    android:paddingBottom="80dp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt, erat nec efficitur sagittis, lorem ipsum feugiat magna, id bibendum augue elit eu nisl. Aenean maximus, justo ut pharetra sollicitudin, ipsum mi hendrerit mi, ut ultrices libero sapien nec tortor. Proin lacinia, nisi eget sagittis laoreet, purus augue dapibus tellus, sit amet faucibus nisi quam ut sapien. In malesuada eget magna ac rhoncus., justo ut pharetra sollicitudin, ipsum mi hendrerit mi, ut ultrices libero sapien nec tortor. Proin lacinia, nisi eget sagittis laoreet, purus augue dapibus tellus, sit amet faucibus nisi quam ut sapien. In malesuada eget magna ac rhoncus, justo ut pharetra sollicitudin, ipsum mi hendrerit mi, ut ultrices libero sapien nec tortor. Proin lacinia, nisi eget sagittis laoreet, purus augue dapibus tellus, sit amet faucibus nisi quam ut sapien. In malesuada eget magna ac rhoncus, justo ut pharetra sollicitudin, ipsum mi hendrerit mi, ut ultrices libero sapien nec tortor. Proin lacinia, nisi eget sagittis laoreet, purus augue dapibus tellus, sit amet faucibus nisi quam ut sapien. In malesuada eget magna ac rhoncus, justo ut pharetra sollicitudin, ipsum mi hendrerit mi, ut ultrices libero sapien nec tortor. Proin lacinia, nisi eget sagittis laoreet, purus augue dapibus tellus, sit amet faucibus nisi quam ut sapien. In malesuada eget magna ac rhoncus" />


            </ScrollView>


            <Button
                android:id="@+id/btn_return"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/retour" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>